[gd_scene load_steps=11 format=3 uid="uid://etfwgmq85ftj"]

[ext_resource type="Script" uid="uid://hcy7fghp7rix" path="res://scripts/ui/menus/sound.gd" id="1_umnwb"]
[ext_resource type="Texture2D" uid="uid://b8yp1lruwabt6" path="res://assets/textures/ui_textures/menus/menus_wooden_background.png" id="2_umnwb"]
[ext_resource type="Theme" uid="uid://bw0qfmu2hvgr6" path="res://assets/ui_themes/buttons/menu_buttons.tres" id="3_ciwkf"]
[ext_resource type="Texture2D" uid="uid://ne5i8ak3n5qe" path="res://assets/textures/ui_textures/menus/buttons/options_button/options_button.png" id="4_dckxl"]
[ext_resource type="Theme" uid="uid://snlsj1gyjpyx" path="res://assets/ui_themes/bold_text.tres" id="5_ciwkf"]
[ext_resource type="Texture2D" uid="uid://wr8unyn4ddya" path="res://assets/textures/ui_textures/menus/Keys/KeyButton.png" id="5_fp11g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_31er2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tfcx3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eqkeo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dsrot"]

[node name="Sound" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_umnwb")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_umnwb")
expand_mode = 1

[node name="soundMenuContainer" type="VBoxContainer" parent="."]
process_mode = 3
z_index = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="menuMargin" type="MarginContainer" parent="soundMenuContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="settingsMargin" type="MarginContainer" parent="soundMenuContainer/menuMargin"]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 2
theme_override_constants/margin_top = 80

[node name="settings" type="VBoxContainer" parent="soundMenuContainer/menuMargin/settingsMargin"]
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 64

[node name="sound" type="Label" parent="soundMenuContainer/menuMargin/settingsMargin/settings"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_ciwkf")
theme_override_font_sizes/font_size = 50
text = "BUTTON_SOUND"

[node name="MarginContainer" type="MarginContainer" parent="soundMenuContainer/menuMargin/settingsMargin/settings"]
layout_mode = 2
theme_override_constants/margin_top = 50

[node name="VBoxContainer" type="VBoxContainer" parent="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="master" type="HBoxContainer" parent="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(1050, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 146

[node name="TextureRect" type="TextureRect" parent="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer/master"]
custom_minimum_size = Vector2(450, 80)
layout_mode = 2
texture = ExtResource("4_dckxl")

[node name="MarginContainer" type="MarginContainer" parent="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer/master/TextureRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 350.0
offset_bottom = 20.0
grow_vertical = 2
theme_override_constants/margin_left = 25

[node name="title" type="Label" parent="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer/master/TextureRect/MarginContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("3_ciwkf")
theme_override_font_sizes/font_size = 30
text = "SETTING_MASTER_VOLUME"
vertical_alignment = 1

[node name="seperator" type="Control" parent="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer/master"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer/master"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HSlider" type="HSlider" parent="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer/master/HBoxContainer"]
custom_minimum_size = Vector2(450, 80)
layout_mode = 2
theme = ExtResource("3_ciwkf")
max_value = 1.0
step = 0.01
value = 1.0

[node name="Label" type="Label" parent="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer/master/HBoxContainer"]
custom_minimum_size = Vector2(50, 80)
layout_mode = 2
theme = ExtResource("5_ciwkf")
theme_override_font_sizes/font_size = 30
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="music" type="HBoxContainer" parent="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(1050, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 146

[node name="TextureRect" type="TextureRect" parent="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer/music"]
custom_minimum_size = Vector2(450, 80)
layout_mode = 2
texture = ExtResource("4_dckxl")

[node name="MarginContainer" type="MarginContainer" parent="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer/music/TextureRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 392.0
offset_bottom = 20.0
grow_vertical = 2
theme_override_constants/margin_left = 25

[node name="title" type="Label" parent="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer/music/TextureRect/MarginContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("3_ciwkf")
theme_override_font_sizes/font_size = 30
text = "SETTING_MUSIC_VOLUME"

[node name="seperator" type="Control" parent="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer/music"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer/music"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer/music/HBoxContainer"]
custom_minimum_size = Vector2(450, 80)
layout_mode = 2
theme = ExtResource("3_ciwkf")
max_value = 1.0
step = 0.01
value = 1.0

[node name="Label" type="Label" parent="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer/music/HBoxContainer"]
custom_minimum_size = Vector2(50, 80)
layout_mode = 2
theme = ExtResource("5_ciwkf")
theme_override_font_sizes/font_size = 30
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="sfx" type="HBoxContainer" parent="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(1050, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 146

[node name="TextureRect" type="TextureRect" parent="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer/sfx"]
custom_minimum_size = Vector2(450, 80)
layout_mode = 2
texture = ExtResource("4_dckxl")

[node name="MarginContainer" type="MarginContainer" parent="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer/sfx/TextureRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 350.0
offset_bottom = 20.0
grow_vertical = 2
theme_override_constants/margin_left = 25

[node name="title" type="Label" parent="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer/sfx/TextureRect/MarginContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("3_ciwkf")
theme_override_font_sizes/font_size = 30
text = "SETTING_SFX_VOLUME"

[node name="seperator" type="Control" parent="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer/sfx"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer/sfx"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer/sfx/HBoxContainer"]
custom_minimum_size = Vector2(450, 80)
layout_mode = 2
theme = ExtResource("3_ciwkf")
max_value = 1.0
step = 0.01
value = 1.0

[node name="Label" type="Label" parent="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer/sfx/HBoxContainer"]
custom_minimum_size = Vector2(50, 80)
layout_mode = 2
theme = ExtResource("5_ciwkf")
theme_override_font_sizes/font_size = 30
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="voice" type="HBoxContainer" parent="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(1050, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 146

[node name="TextureRect" type="TextureRect" parent="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer/voice"]
custom_minimum_size = Vector2(450, 80)
layout_mode = 2
texture = ExtResource("4_dckxl")

[node name="MarginContainer" type="MarginContainer" parent="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer/voice/TextureRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 350.0
offset_bottom = 20.0
grow_vertical = 2
theme_override_constants/margin_left = 25

[node name="title" type="Label" parent="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer/voice/TextureRect/MarginContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("3_ciwkf")
theme_override_font_sizes/font_size = 30
text = "SETTING_VOICE_VOLUME"

[node name="seperator" type="Control" parent="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer/voice"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer/voice"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer/voice/HBoxContainer"]
custom_minimum_size = Vector2(450, 80)
layout_mode = 2
theme = ExtResource("3_ciwkf")
max_value = 1.0
step = 0.01

[node name="Label" type="Label" parent="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer/voice/HBoxContainer"]
custom_minimum_size = Vector2(50, 80)
layout_mode = 2
theme = ExtResource("5_ciwkf")
theme_override_font_sizes/font_size = 30
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NinePatchRect" type="NinePatchRect" parent="soundMenuContainer/menuMargin"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="buttonMargin" type="MarginContainer" parent="soundMenuContainer/menuMargin/NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -111.0
offset_top = -33.5
offset_right = 111.0
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 70

[node name="buttons" type="VBoxContainer" parent="soundMenuContainer/menuMargin/NinePatchRect/buttonMargin"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="buttonsBack" type="HBoxContainer" parent="soundMenuContainer/menuMargin/NinePatchRect/buttonMargin/buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="soundMenuContainer/menuMargin/NinePatchRect/buttonMargin/buttons/buttonsBack"]
custom_minimum_size = Vector2(320, 180)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("5_fp11g")
expand_mode = 1

[node name="back" type="Button" parent="soundMenuContainer/menuMargin/NinePatchRect/buttonMargin/buttons/buttonsBack/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -187.0
offset_top = -32.5
offset_right = 187.0
offset_bottom = 32.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_ciwkf")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_31er2")
theme_override_styles/hover = SubResource("StyleBoxEmpty_tfcx3")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_eqkeo")
theme_override_styles/normal = SubResource("StyleBoxEmpty_dsrot")
text = "BUTTON_BACK"

[connection signal="value_changed" from="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer/master/HBoxContainer/HSlider" to="." method="_on_master_changed"]
[connection signal="value_changed" from="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer/music/HBoxContainer/HSlider" to="." method="_on_music_changed"]
[connection signal="value_changed" from="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer/sfx/HBoxContainer/HSlider" to="." method="_on_sfx_changed"]
[connection signal="value_changed" from="soundMenuContainer/menuMargin/settingsMargin/settings/MarginContainer/VBoxContainer/voice/HBoxContainer/HSlider" to="." method="_on_voice_changed"]
[connection signal="pressed" from="soundMenuContainer/menuMargin/NinePatchRect/buttonMargin/buttons/buttonsBack/TextureRect/back" to="." method="_on_back_pressed"]
